[package]
name = "net-authority"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "net_authority"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.21.0", features = ["init-if-needed"] }
bytemuck = "1.7.2"
uuid = "0.8.2"
num_enum = "0.5.4"
byte-slice-cast = "1.0.0"
solana-program = "1.8.5"
slab-alloc = { version = "1.0.0", path = "/Users/mfrager/Build/solana/crates/slab-alloc" }
